clean up ISubscriptionTopicLoader